@@ -1,5 +1,11 @@
 @comment $NetBSD$
 bin/player
+bin/playerctl
+include/Desktop/Player.h
 share/Player/splash.png
 share/applications/player.desktop
+share/doc/html/Player/player.html
+share/doc/html/Player/playerctl.html
 share/locale/fr/LC_MESSAGES/Player.mo
+man/man1/player.1
+man/man1/playerctl.1
