@@ -1,5 +1,5 @@
 $NetBSD$
 
-SHA1 (Player-0.1.4.tar.gz) = c75f8d90a0b6f3b115b50d88322a73e77d2da101
-RMD160 (Player-0.1.4.tar.gz) = 4a1b60ddb8db722ae8976465c09f1e233b95926a
-Size (Player-0.1.4.tar.gz) = 37215 bytes
+SHA1 (Player-0.1.5.tar.gz) = 2ae99f589ca4c56ed02ef1b7862341318143bd0e
+RMD160 (Player-0.1.5.tar.gz) = c32761c57948aae56f66df64a4d67a0532ab4261
+Size (Player-0.1.5.tar.gz) = 40600 bytes
