@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.37 2012/10/28 06:30:59 asau Exp $
+# $NetBSD: Makefile,v 1.38 2012/12/13 08:03:20 adam Exp $
 
-DJANGOVERS=	1.4.3
+DJANGOVERS=	1.4.5
 DISTNAME=	Django-${DJANGOVERS}
 PKGNAME=	${PYPKGPREFIX}-django-${DJANGOVERS}
 CATEGORIES=	www python
