@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.22 2012/10/18 12:04:17 adam Exp $
+$NetBSD: distinfo,v 1.23 2012/12/13 08:03:21 adam Exp $
 
-SHA1 (Django-1.4.3.tar.gz) = 96b1a44afef3b765b55ba10ad81ca8fc29eca5a2
-RMD160 (Django-1.4.3.tar.gz) = d14877b9e603fff9db2f5b04cd9337415335b42f
-Size (Django-1.4.3.tar.gz) = 7729808 bytes
+SHA1 (Django-1.4.5.tar.gz) = 1bfaa4643c6775fbf394137f1533659be45441e7
+RMD160 (Django-1.4.5.tar.gz) = 62f7e083937fa3b6d4cad591ce42e8f342fdc6e6
+Size (Django-1.4.5.tar.gz) = 7735582 bytes
